--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h1>Reparacion a domicilio</h1>
         </section>
         
-        <h2>Para el futuro o para hoy</h2>
+        <h2>Para el futuro o para hoy.</h2>
 
         <section id="servicios">
             <h2>Nuestros servicios</h2>
