pagina de contacto,, enlaces coregidos

--- a/Resto/contacta.html
+++ b/Resto/contacta.html
@@ -14,7 +14,7 @@
                 <nav class="menu1">
                     <a class="btn" href="../index.html">Inicio</a>
                     <a class="btn" href="">Quienes somos</a>
-                    <a class="btn" href="">Servicios</a>
+                    <a class="btn" href="../index.html">Servicios</a>
                     <a class="btn" href="">Contacta</a>
                 </nav>
             </div>
