logo en contacta e incion y color en las cartas

--- a/Resto/contacta.html
+++ b/Resto/contacta.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Reparaciones LK</title>
         <link rel="stylesheet" href="estilos.css">
+        <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     </head>
 
     <body id="contactar">
@@ -12,10 +13,10 @@
             <div class="contenedor">
                 <a href="../index.html" class="logo">Reparaciones LK</a>
                 <nav class="menu1">
-                    <a class="btn" href="../index.html">Inicio</a>
+                    <a class="btn" href="../index.html"><i class='bx bxs-home' ></i>Inicio</a>
                     <a class="btn" href="">Quienes somos</a>
-                    <a class="btn" href="../index.html">Servicios</a>
-                    <a class="btn" href="">Contacta</a>
+                    <a class="btn" href="../index.html#servicios">Servicios</a>
+                    <a class="btn" href=""><i class='bx bxs-contact'></i>Contacta</a>
                 </nav>
             </div>
         </header>
