--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Reparaciones LK</title>
         <link rel="stylesheet" href="Resto/estilos.css">
+        <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     </head>
     <body>
         <header>
             <div class="contenedor">
                 <a href="" class="logo">Reparaciones LK</a>
                 <nav class="menu1">
-                    <a class="btn" href="#">Inicio</a>
+                    <a class="btn" href="#"><i class='bx bxs-home' ></i>Inicio</a>
                     <a class="btn" href="">Quienes somos</a>
                     <a class="btn" href="#servicios">Servicios</a>
-                    <a class="btn" href="Resto/contacta.html">Contacta</a>
+                    <a class="btn" href="Resto/contacta.html"><i class='bx bxs-contact'></i>Contacta</a>
                 </nav>
             </div>
         </header>
